# polytest

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  report.md  report2.md  report4.md  report5.md  requirements.txt
alerts/: __init__.py  telegram_bot.py
config/: settings.py
data/: __init__.py  bitquery_client.py  clob_client.py  gamma_client.py  websocket_stream.py
db/: __init__.py  models.py  session.py
db/migrations/: 001_initial.sql  002_add_simulation.sql
execution/: __init__.py  order_executor.py  position_tracker.py  risk_gate.py
monitor/: api.py  dashboard.html
scheduler/: __init__.py  jobs.py
scoring/: __init__.py  whale_scorer.py  whitelist_manager.py
scripts/: analyze_results.py  reset_sim.py  seed_whales.py  test_ws.py
signals/: __init__.py  position_ledger.py  signal_engine.py
simulation/: __init__.py  market_monitor.py  paper_trader.py  performance_tracker.py
tests/: test_paper_trader.py  test_position_ledger.py  test_risk_gate.py  test_signal_engine.py  test_whale_scorer.py
